# otus_dz8_bayan

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  main.cpp
data/: f1
data/dir1/: f4  f6  f7
